--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,7 +6,7 @@ sites:
   - name: CLC Lodging
     url: https://clclodging.com
   - name: CLC Lodging Login
-    url: https://account.clclodging.com/login.cfm
+    url: https://account.clclodging.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
