--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -22,6 +22,7 @@ status-website:
       href: /
     - title: Upptime-ERS
       href: https://github.com/$OWNER/$REPO
+  theme: light
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
